optimize projects pictures

--- a/projects.html
+++ b/projects.html
@@ -36,14 +36,14 @@
         <div class="trio">
         <div class="duo">
             <a href="index.html" class="project">
-                <img src="assets/house-find-hero.png" alt="project-picture">
+                <img src="assets/house-find-hero.webp" alt="project-picture">
                 <p>Real State Managemment System</p>
             </a>
             <h3>House-Find</h3>            
                     </div>
         <div class="duo">
             <a href="index.html" class="project">
-                <img src="assets/photo_5996613938764170379_w.jpg" alt="project-picture">
+                <img src="assets/auto-hero.webp" alt="project-picture">
                 <p>E-commerce Website</p>
             </a>
             <h3>Auto-Accessoire</h3>            
@@ -53,14 +53,14 @@
                 <div class="trio">
         <div class="duo">
             <a href="index.html" class="project">
-                <img src="assets/rihla-hero.png" alt="project-picture">
+                <img src="assets/rihla-hero.webp" alt="project-picture">
                 <p>Travel Agency</p>
             </a>
             <h3>Rihla</h3>            
                     </div>
         <div class="duo">
             <a href="index.html" class="project">
-                <img src="assets/movo-hero.png" alt="project-picture">
+                <img src="assets/movo-hero.webp" alt="project-picture">
                 <p>E-commerce Website</p>
             </a>
             <h3>Movo</h3>            
