--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,24 @@
                     </div>
         </div>
 
+        <div class="trio">
+        <div class="duo">
+            <a href="index.html" class="project">
+                <img src="assets/boxer-hero.webp" alt="project-picture">
+                <p>Boxer Managemment</p>
+            </a>
+            <h3>Boxer</h3>            
+                    </div>
+        <div class="duo">
+            <a href="index.html" class="project">
+                <img src="assets/library-hero.webp" alt="project-picture">
+                <p>Library Website</p>
+            </a>
+            <h3>Library</h3>            
+                    </div>
+        </div>
+
+
     </section>
 
     <footer>
