jalil added house find project

--- a/projects.html
+++ b/projects.html
@@ -35,7 +35,7 @@
     <section class="projects">
         <div class="trio">
         <div class="duo">
-            <a href="index.html" class="project">
+            <a href="project-house.html" class="project">
                 <img src="assets/house-find-hero.webp" alt="project-picture">
                 <p>Real State Managemment System</p>
             </a>
