jalil added some projucts

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
             <h3>House-Find</h3>            
                     </div>
         <div class="duo">
-            <a href="index.html" class="project">
+            <a href="auto.html" class="project">
                 <img src="assets/auto-hero.webp" alt="project-picture">
                 <p>E-commerce Website</p>
             </a>
@@ -52,14 +52,14 @@
 
                 <div class="trio">
         <div class="duo">
-            <a href="index.html" class="project">
+            <a href="rihla.html" class="project">
                 <img src="assets/rihla-hero.webp" alt="project-picture">
                 <p>Travel Agency</p>
             </a>
             <h3>Rihla</h3>            
                     </div>
         <div class="duo">
-            <a href="index.html" class="project">
+            <a href="movo.html" class="project">
                 <img src="assets/movo-hero.webp" alt="project-picture">
                 <p>E-commerce Website</p>
             </a>
@@ -69,8 +69,8 @@
 
         <div class="trio">
         <div class="duo">
-            <a href="index.html" class="project">
-                <img src="assets/boxer-hero.webp" alt="project-picture">
+            <a href="boxer.html" class="project">
+                <img src="assets/boxer1.webp" alt="project-picture">
                 <p>Boxer Managemment</p>
             </a>
             <h3>Boxer</h3>            
