jalil ended v1 od portfolio

--- a/auto.html
+++ b/auto.html
@@ -34,7 +34,7 @@
       </div>
 
     <div class="element">
-        <div class="text-element">Confirm Cancel orders</div>
+        <div class="text-element">Confirm cancel orders</div>
         <img src="assets/auto4.webp" alt="project-picture">
       </div>
 
