--- a/movo.html
+++ b/movo.html
@@ -13,8 +13,49 @@
       <section class="hero">
         <div class="title">MOVO</div>
         <div class="description">An e-commerce website to sell medical products</div>
-        <img src="assets/rihla-hero.webp" alt="project-picture">
+        <img src="assets/movo-hero.webp" alt="project-picture">
       </section>
+
+
+      <div class="part">USER PART</div>
+
+    <div class="element">
+        <div class="text-element">See products</div>
+        <img src="assets/movo1.webp" alt="project-picture">
+      </div>
+
+        <div class="element">
+        <div class="text-element">See category</div>
+        <img src="assets/movo2.webp" alt="project-picture">
+      </div>
+
+          <div class="element">
+        <div class="text-element">Details of product</div>
+        <img src="assets/movo3.webp" alt="project-picture">
+      </div>
+
+
+      <div class="part">ADMIN PART</div>
+
+    <div class="element">
+        <div class="text-element">Manage products edit or delete</div>
+        <img src="assets/movo4.webp" alt="project-picture">
+      </div>
+
+    <div class="element">
+        <div class="text-element">Add product</div>
+        <img src="assets/movo5.webp" alt="project-picture">
+      </div>
+
+    <div class="element">
+        <div class="text-element">See orders</div>
+        <img src="assets/movo8.webp" alt="project-picture">
+      </div>
+
+    <div class="element">
+        <div class="text-element">Confirm delete cancel orders</div>
+        <img src="assets/movo7.webp" alt="project-picture">
+      </div>
 
 </body>
 </html>
