--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="projects.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Document</title>
+    <title>projects</title>
 </head>
 <body>
     
@@ -28,7 +28,6 @@
             <li><a href="index.html">Home</a></li>
             <!-- <li><a href="">Skills</a></li> -->
             <li><a href="#">Projects</a></li>
-            <li><a href="">Hire Me</a></li>
         </ul>
     </nav>
 
@@ -76,7 +75,7 @@
             <h3>Boxer</h3>            
                     </div>
         <div class="duo">
-            <a href="index.html" class="project">
+            <a href="library.html" class="project">
                 <img src="assets/library-hero.webp" alt="project-picture">
                 <p>Library Website</p>
             </a>
@@ -87,13 +86,15 @@
 
     </section>
 
-    <footer>
+    <footer id="contact">
         <p>&copy; 2025 ajalil01, All rights reserved</p>
         <div class="social-links">
-            <a href=""><i class="fa-brands fa-github"></i></a>
-            <a href=""><i class="fa-brands fa-instagram"></i></a>
-            <a href=""><i class="fa-brands fa-whatsapp"></i></a>
-            <a href=""><i class="fa-brands fa-facebook"></i></a>
+
+            <a href="https://www.facebook.com/aab.jalil.2025" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+            <a href="https://www.instagram.com/b.aaj_01/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://t.me/AJalil01" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                        <a href="https://wa.me/213552551683" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+
         </div>
     </footer>
 
