--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
         <h1>Working with me is an easy thing</h1>
 
         <section>
-        <div class="title">We Agree what do you want</div>
-        <div class="title">We made for you a logo if you has'nt</div>
+        <div class="title">We Agree about what do you want</div>
+        <div class="title">We will make for you a logo if you don't have</div>
                 <img src="assets/logo1.webp" alt="projects-logo">
 
         <div class="title">We build a structure then a design for the project</div>
