--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="hero-image">
-            <img src="assets/WIN_20250430_07_17_08_Pro.jpg" alt="Profile" class="profile-img">
+            <img src="assets/download (2).jpg" alt="Profile" class="profile-img">
         </div>
     </section>
 
